# anonqa

./: .deepsource.toml  .dockerignore  .flake8  .gitignore  .prettierignore  README.md  alembic.ini.sample  bot.Dockerfile  config.toml.sample  docker-compose.yml  format.sh  pyproject.toml  web.Dockerfile
anonqa/alembic/: env.py
anonqa/alembic/versions/: 3a6b5a520aed_base.py
anonqa/bot/: __main__.py  commands.py
anonqa/bot/filters/: is_admin.py
anonqa/bot/handlers/: __init__.py
anonqa/bot/handlers/admin/: __init__.py  statistics.py  stuff.py
anonqa/bot/handlers/user/: info.py  start.py
anonqa/bot/keyboards/: __init__.py  start.py
anonqa/bot/middlewares/: __init__.py  throttling.py
anonqa/shared/: config.py  log.py  misc.py
anonqa/shared/db/: __init__.py  models.py
anonqa/web/: bot.py  models.py  server.py
anonqa/web/routers/: v1.py
anonqa/web/static/css/: shared.css
anonqa/web/static/img/tgs/: cross.tgs  emailbox.tgs  raccoon.tgs  sad.tgs
anonqa/web/static/js/: shared.js  telegram-web-app.min.js  tgs-player.min.js
anonqa/web/templates/: send.html
