[tool.black]
preview = true

[tool.ruff]
exclude = ["web/web/alembic/versions"]

[tool.poetry]
name = "anonqa"
version = "0.1.0"
description = ""
authors = ["hikariatama <elusloodus@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiohttp = "^3.8.5"
ormar = "^0.12.2"
toml = "^0.10.2"
pycryptodome = "^3.19.0"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.6"
alembic = "^1.12.0"
slowapi = "^0.1.8"
structlog = "^23.2.0"
aiogram = "3.0.0b5"
aiogram-dialog = "2.0.0b11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
